word spacing is fixed

--- a/src/app/shared/components/volume-cell/volume-cell.component.scss
+++ b/src/app/shared/components/volume-cell/volume-cell.component.scss
@@ -53,4 +53,8 @@
     font-size: 14px;
     white-space: nowrap;
   }
+
+  &__subtext-with-spacing {
+    word-spacing: 1px;
+  }
 }
